--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CN lab programs</title
+  <title>CN lab programs</title>
   
 <script src="https://jsuites.net/v4/jsuites.js"></script>   
 <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
@@ -25,45 +25,6 @@
 </head>
 <body>
   
-    <!--        
-
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
-<i class="fa fa-close" style="font-size:36px"></i></a>
-  <a href="https://azlanlive.netlify.app/">PROFILE</a>
-  <a href="/index.html">PORTFOLIO</a>
-  <a href="#">MY WORKS</a>
-  <a href="#">Contact</a>
-
-</div>
-
-<span id="" style="font-size:30px;cursor:pointer" onclick="openNav()">
-   <p id="">  <i class="fas fa-bars" style="font-size:36px;padding: 7px; background-color: ;  position: absolute; top: 0;"> 
-   
-   
-   </i> </p>   
-<p class="logo"> </p>
-  
-</span>
-<div class="navbar">
-  <a href="javascript:void(0)"  class="logo">
-      
-</a> 
-</div> -->  <!--        
-<center> 
-<div class="image">
-  <img src="lion.png" alt="lion" width="350px" > 
-</div> </center> -->
-<!-- lab program starts here-->
-  <!--        
-<div class="switch" >
-  <div class="switch1">
-    <a href="">CN</a>
-  </div>         
-  <a onclick="onn()" href="/dbms/dbms.html"> 
-  <div class="switch2">
-    DBMS <div id="overlay" ><div class="loader"></div></div>
-  </div></a>       -->
 </div>
 <div class="lab">
   <h1>OOC LAB</h1>
@@ -84,9 +45,7 @@
 </div>
 <button class="texts-btn"  id="demo"
   
- onclick="myFunction8()" onmouseout="outFunc()"
- 
- >
+ onclick="myFunction8()" >
   select texts
   </button> 
   
