--- a/index.html
+++ b/index.html
@@ -205,21 +205,73 @@ case 2: if(n>0)
       <div class="details">
 
         <button class="texts-btn" id="copied" onclick="myFunction1()" onmouseout="outFunc()"><i class="fa fa-copy"></i> Copy</button>
-        <h3>1. Design, Develop and Implement a menu driven Program in C for the following Array
-          operations
-          a. Creating an Array of N Integer Elements
-          b. Display of Array Elements with Suitable Headings
-          c. Inserting an Element (ELEM) at a given valid Position (POS)
-          d. Deleting an Element at a given valid Position (POS)
-          e. Exit.
-          Support the program with functions for each of the above operations.</h3>
+        <h3>
+        PROGRAM 1</h3>
         <p></p>
       </div>
     </div>
     <div class="card card2">
       <div class="container">
         <textarea name="" id="myInput1" cols="90" rows="10">
-      programs
+     #include<stdio.h>
+#include<stdlib.h>
+void ReadStrings();
+void PatternMatching(char[], char[], char[]);
+char STR[100],PAT[100],REP[100];
+int main()
+{
+ReadStrings(STR,PAT,REP);
+PatternMatching(STR, PAT, REP);
+}
+void ReadStrings(char STR[100], char PAT[100], char REP[100])
+{
+printf("Enter the main string STR : ");
+gets(STR);
+printf("Enter the pattern string PAT : ");
+gets(PAT);
+printf("Enter the replace string REP : ");
+gets(REP);
+}
+void PatternMatching(char STR[100], char PAT[100], char REP[100])
+{
+int i,j,k,m,c,flag,count;
+i=m=c=j=count=flag=0;
+char RESULT[100];
+while(STR[c] != '\0')
+{
+if(STR[m] == PAT[i])
+{
+i++;
+m++;
+if(PAT[i] =='\0')
+{
+for(k=0;REP[k] !='\0';k++,j++)
+
+RESULT[j]=REP[k];
+i=0;
+c=m;
+count++;
+flag =1;
+}
+}
+else
+{
+RESULT[j]=STR[c];
+j++;
+c++;
+m=c;
+i=0;
+}
+}
+if(flag == 0)
+printf("Pattern does not found\n");
+else
+{
+RESULT[j]='\0';
+printf("Pattern found %d times\n",count);
+printf("The resultant string is\n%s\n",RESULT);
+}
+}
                   </textarea>
 
       </div>
@@ -233,13 +285,112 @@ case 2: if(n>0)
     <div class="card card3">
       <div class="container">
         <textarea name="" id="myInput2" cols="90" rows="10">
-                             programs
+                             #include<stdio.h>
+#include<stdlib.h>
+#include<math.h>
+#define MAX 3
+void push(int[], int, int);
+int pop(int[], int);
+void palin(int[], int);
+void display(int[], int);
+int main()
+{
+int choice,stack[MAX],top=-1,ele;
+while(1)
+{
+printf("\n\n**********************MENU*****************");
+printf("\n1. Push an Element to Stack\n2. Pop an Element
+from Stack\n3. Checking Stack for Palindrome\n4. Display the status of
+Stack\n5. Exit\n");
+printf("Enter your choice : ");
+scanf("%d", &choice);
+switch(choice)
+{
+case 1: if(top < MAX-1)
+{
+printf("Enter the element to be pushed :
+");
+scanf("%d",&ele);
+top++;
+push(stack,ele,top);
+}
+else
+printf("Stack is full\n");
+break;
+case 2: if(top >= 0)
+{
+ele = pop(stack,top);
+top--;
+printf("The element popped is %d",ele);
+}
+else
+printf("Stack is empty\n");
+break;
+case 3: palin(stack, top);
+break;
+case 4: display(stack,top);
+break;
+case 5: exit(0);
+}
+}
+}
+void push(int stack[MAX],int ele, int top)
+{
+stack[top] = ele;
+}
+int pop(int stack[MAX], int top)
+{
+return stack[top];
+}
+void palin(int stack[MAX],int top)
+{
+int i, num=0,count=0,temp=0,dup=0,digit=0,rev=0;
+if(top >= 0)
+{
+for(i=top;i>=0;i--)
+{
+num = stack[i];
+while(num != 0)
+{
+num = num/10;
+count++;
+}
+temp = temp * pow(10,count) + stack[i];
+count = 0;
+}
+dup = temp;
+while(temp != 0)
+{
+digit = temp%10;
+rev = rev * 10 + digit;
+temp = temp/10;
+}
+if(dup == rev)
+printf("The content of stack is palindrome");
+else
+printf("The content of stack is not palindrome");
+}
+else
+printf("Stack is empty\n");
+}
+void display(int stack[MAX], int top)
+{
+int i;
+if(top >= 0)
+{
+printf("The elements of stack are\n\n");
+for(i=0; i<=top; i++)
+printf("%d ",stack[i]);
+}
+else
+printf("Stack is empty\n");
+}
         </textarea>
       </div>
       <div class="details">
 
         <button class="texts-btn" id="copied2" onclick="myFunction3()" onmouseout="outFunc()"><i class="fa fa-copy"></i> Copy</button>
-        <h3>PROGRAM 3</h3>
+        <h3>PROGRAM 4</h3>
         <p></p>
       </div>
     </div>
@@ -249,7 +400,91 @@ case 2: if(n>0)
             <div class="container">
                 <textarea  name="" id="myInput3" cols="90" rows="10">
 
-                  <!-- programs here -->
+                #include<stdio.h>
+#include<stdlib.h>
+int stack[20];
+int top = -1;
+void push(char);
+char pop();
+int incmprc(char);
+int instprc(char);
+void IntoPost(char[], char[]);
+int main()
+{
+char infix[20], postfix[20];
+printf("Enter the valid infix expression : ");
+scanf("%s",infix);
+push('#');
+IntoPost(infix,postfix);
+printf("The corresponding postfix expression is :
+\n%s\n",postfix);
+}
+void push(char ch)
+{
+stack[++top]=ch;
+}
+char pop()
+{
+return stack[top--];
+}
+int incmprc(char ch)
+{
+switch(ch)
+{
+case '+' :
+case '-' : return 1;
+case '*' :
+case '/' :
+case '%' : return 2;
+case '^' : return 3;
+}
+}
+int instprc(char ch)
+{
+switch(ch)
+{
+case '#' :
+case '(' : return 0;
+case '+' :
+case '-' : return 1;
+case '*' :
+case '/' :
+case '%' : return 2;
+case '^' : return 3;
+}
+}
+void IntoPost(char infix[20], char postfix[20])
+{
+int i=0,j=0;
+char ch;
+ch = infix[i++];
+while(ch !='\0')
+{
+switch(ch)
+{
+case '(': push(ch);
+break;
+case ')': while(stack[top]!='(')
+postfix[j++] = pop();
+pop();
+break;
+case '^':
+case '+':
+case '-':
+case '*':
+case '/':
+case '%': while(incmprc(ch) <= instprc(stack[top]))
+postfix[j++] = pop();
+push(ch);
+break;
+default : postfix[j++] = ch;
+}
+ch = infix[i++];
+}
+while(stack[top] != '#')
+postfix[j++] = pop();
+postfix[j]= '\0';
+}
 
                   </textarea>
             </div>
