--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
  
   <div class="sub">
     <div>
-      ...
-      <a href="page not">
+     
+      <a href="/java/cn.html">
+        JAVA
       </a>
     </div>
     <div class="subactiv" >
       <a >
-       DSL
+       DSA
       </a>
     </div>
 
