--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ onclick="myFunction1()" onmouseout="outFunc()"><i class="fa fa-copy"></i> Copy</
         <a href="https://instagram.com/azlan_ajju?igshid=YmMyMTA2M2Y=">
           <i class="fa fa-instagram"></i>
         </a>
-        <a href="">
+        <a href="https://www.linkedin.com/in/muhammed-azlan-7612b0234/">
           <i class="fa fa-linkedin-square"></i>
         </a>
         </div>
