--- a/java/cn.html
+++ b/java/cn.html
@@ -28,7 +28,7 @@
 
     <a   href="https://4thsemlab.netlify.app/">sem4</a>
 
-    <a href="">sem5</a>
+    <a href="https://labprograms.netlify.app/">sem5</a>
 
     <a href="">sem6</a>
 
