--- a/java/cn.html
+++ b/java/cn.html
@@ -24,13 +24,13 @@
 
 
 
-    <a  href="">sem3</a>
+    <a class="active"  href="">sem3</a>
 
     <a   href="https://4thsemlab.netlify.app/">sem4</a>
 
-    <a class="active" href="">sem5</a>
+    <a href="https://labprograms.netlify.app">sem5</a>
 
-    <a href="">sem6</a>
+    <a href="not available">sem6</a>
 
     <a href="https://7thsemlab.netlify.app/">sem7</a>
 
