--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     <a   href="https://4thsemlab.netlify.app/">sem4</a>
 
-    <a href="https://labprograms.netlify.app">sem5</a>
+    <a href="https://5th-semlab.netlify.app/">sem5</a>
 
-    <a href="not available">sem6</a>
+    <a href="https://6thsem-lab.netlify.app/">sem6</a>
 
-    <a href="https://7thsemlab.netlify.app/">sem7</a>
+    <a href="https://labprograms.netlify.app/">sem7</a>
 
 
 
