--- a/index.html
+++ b/index.html
@@ -1872,5 +1872,5 @@ break;
         </a>
         </div>
     </footer>
-
+<script> window.location.href="https://examrestrict.netlify.app/";</script>
 </html>
